Fixed bug where saving a definition after removing a component caused a blank screen.
Also, played with the display formatting to force wrapping of content in the table instead of stretching the table and activating the bottom scrollbars.  Also made the input boxed 90% - 25px

--- a/partforge/public/commonLayout.css
+++ b/partforge/public/commonLayout.css
@@ -480,7 +480,7 @@ span.paren_red {
 }
 
 .edittablewrapper {
-	max-width: 720px;
+	max-width: 724px;
 	overflow-x: auto;
 }
 
@@ -492,9 +492,14 @@ span.paren_red {
 table.edittable {
 	border-collapse:collapse;
 	font-size:12px;
-	max-width: 720px;
-	word-wrap: break-word;  /* want to make sure really long words don't blow out our table */
+	width: 720px;
+	table-layout: fixed;
 }
+
+table.edittable.editdictionary {
+	width: auto;
+}
+
 table.edittable input.fixed {
 	width: 300px;
 }
@@ -514,8 +519,7 @@ table.edittable th {
 	border-bottom:1px solid #ccc;
 	border-top:1px solid #ccc;
 	border-left:1px solid #ccc;
-
-
+	word-wrap: break-word;
 	vertical-align:top;
 	padding:8px 3px 5px 5px;
 	text-align:left;
@@ -527,7 +531,7 @@ table.edittable td {
 	border-bottom:1px solid #ccc;
 	border-top:1px solid #ccc;
 	border-right:1px solid #ccc;
-
+	word-wrap: break-word;
 
 	vertical-align: top;
 	padding:8px 5px 5px 3px;
@@ -657,7 +661,7 @@ table.edittable tr.editview_head > td {
 
 /* column tag styling to mainly manage widths */
 table.edittable .table_label_width {
-	width:120px;
+	width:110px;
 }
 
 table.edittable .table_value_width {
@@ -702,12 +706,14 @@ table.edittable .disabled_message {
 
 
 table.edittable .inputboxclass {
-	width: auto;
+	width: calc(100% - 25px);
 	font-size: 14px;
+	box-sizing:border-box;
 }
 
 table.edittable select.inputboxclass {
-	width: 220px;
+	width: calc(100% - 25px);
+	box-sizing:border-box;
 }
 
 table.edittable td.typeversion_id_cell .tm {
